added headings and menu

--- a/helloworld.html
+++ b/helloworld.html
@@ -3,8 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title>Your Bikaner</title>
+    <style media="screen">
+      h1 {
+        color: green; font: Arial;
+      }
+    </style>
   </head>
   <body>
     <p>This site will put information about the city <b>Bikaner</b></p>
+    <h1>This is the heading 1</h1>
+    <h2>This is the heading 2</h2>
+    <table>
+      <tr>
+      <th>Menu</th>
+      </tr>
+      <tr>
+        <td>About</td>
+      </tr>
+      <tr>
+        <td>What to do</td>
+        </tr>
+      <tr>
+        <td>Restaurants</td>
+        </tr>
+        <tr>
+        <td>Hotels</td>
+      </tr>
+      <div class="bik1">
+        <p>History of the city Bikaner</p>
+      </div>
+    </table>
   </body>
 </html>
