added more style sheet properties

--- a/helloworld.html
+++ b/helloworld.html
@@ -7,6 +7,12 @@
       h1 {
         color: green; font: Arial;
       }
+      h2 {
+       color: blue; text-align: center; 
+      }
+      .bik1 {
+        color: red;
+      }
     </style>
   </head>
   <body>
