--- a/helloworld.html
+++ b/helloworld.html
@@ -13,6 +13,9 @@
       .bik1 {
         color: red;
       }
+      table {
+        border: 5px; color:black; 
+      }
     </style>
   </head>
   <body>
