--- a/helloworld.html
+++ b/helloworld.html
@@ -8,10 +8,13 @@
         color: green; font: Arial;
       }
       h2 {
-       color: blue; text-align: center; 
+       color: blue; text-align: center;
       }
       .bik1 {
         color: red;
+      }
+      table {
+        border: 3px solid blue; color:red;
       }
     </style>
   </head>
